# srcType

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: QueryExample.cpp  README.md  example.cpp.xml
src/: CMakeLists.txt
src/cpp/: srcType.cpp  srcTypeHandler.cpp  utility.hpp
src/headers/: SideEffectPolicy.hpp  srcType.hpp  srcTypeDefs.hpp  srcTypeHandler.hpp  srcTypeInferencePolicy.hpp  srcTypeProfile.hpp  srctype_utility.hpp
src/tests/: TestSideEffect.cpp  srcTypeTest.cpp
